compiler/tests/should-fail/TypeMismatch4.via
/* TypeMismatchError */

host alice
host bob

fun main() {
    val x: int@Local(host = {alice, bob}) = 0;
}
